rbx_dom_test/src/snapshots/test__redact_multi.snap
---
source: test_util/src/lib.rs
expression: view_tree(&tree)
---
id: id-0
name: Root
class_name: Folder
properties: {}
children:
  - id: id-1
    name: Child 0
    class_name: Folder
    properties: {}
    children: []
  - id: id-2
    name: Child 1
    class_name: Folder
    properties: {}
    children: []
  - id: id-3
    name: Child 2
    class_name: Folder
    properties: {}
    children: []
  - id: id-4
    name: Child 3
    class_name: Folder
    properties: {}
    children: []
